--- a/.github/workflows/data_pipeline.yml
+++ b/.github/workflows/data_pipeline.yml
@@ -31,7 +31,7 @@ jobs:
           git config user.name 'github-actions'
           git config user.email 'github-actions@github.com'
           git add .
-          git diff --staged --quiet || echo "changes=true" >> GITHUB_DEV
+          git diff --staged --quiet || echo "changes=true" >> $GITHUB_ENV
       - name: Commit and push if changes
         if: env.changes == 'true'
         run: |
